--- a/README
+++ b/README
@@ -1,6 +1,9 @@
-- Exercices pour les trois parties
-  - Pratique la fusion des fichiers xls#csv
-  - Creer un google spreadsheets et essayer de le charger dans R sans passer par le module de sauvegarde
-  - Liste de DOI retirer tous les auteurs, Annexes qui affichent la biblio, pandoc bibtex via YALM and JSON. DOI - pourquoi se casser le cul a aller chercher tous les refs alors que le DOI le fait pour toi
-  - Nettoyer la taxonomy
-  - Mendeley - Essayer d'importer des PDFs dans mendeley, exporter la bib en CSV
+
+## Meta-analyses workshop held at Gault reserve (Mont Saint-Hilaire)
+27 to 29th of October
+
+### Some miscelaneous talks on managing tools
+
+- Talk #1: [DOI](https://SteveViss.github.io/Talk_meta_analysis/doi)
+- Talk #2: [spreadsheets](https://SteveViss.github.io/Talk_meta_analysis/spreadsheets)
+- Talk #3: [DOI](https://SteveViss.github.io/Talk_meta_analysis/taxize)
