Fixing quick error

--- a/README
+++ b/README
@@ -6,4 +6,4 @@
 
 - Talk #1: [DOI](https://SteveViss.github.io/Talk_meta_analysis/doi)
 - Talk #2: [spreadsheets](https://SteveViss.github.io/Talk_meta_analysis/spreadsheets)
-- Talk #3: [DOI](https://SteveViss.github.io/Talk_meta_analysis/taxize)
+- Talk #3: [taxize](https://SteveViss.github.io/Talk_meta_analysis/taxize)
